--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Danish fiction'
+- GITenberg
 tableOfContents: En Sommernatsdrøm -- Fra Kvist til Kjælder.
 title: 'Skovstrup-Folk: To Fortællinger'
 url: http://www.gutenberg.org/ebooks/41198
